--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
